# rocrate-to-pages

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MAKEFILE  README.md  action.yml  dev-requirements.txt  entrypoint.py  entrypoint.sh  paper.md  pyproject.toml  requirements.txt
.github/.workflows/: test_cases.yml
.github/workflows/: build.yml  major-release-num.yml  pr_validation.yml  release_management.yml  send-to-pages.yml
src/: README.md  main.py
src/templates/: dataset_catalogue_index.html  dataset_catalogue_metadata.ttl  index.html  overarching_index.html
src/utils/: config_utils.py  gh_pages_builder.py  git_utils.py  html_build_util.py  metadata_extractor.py
src/utils/singleton/: location.py  logger.py
tests/: test_metadata_extractor.py  test_opengraph_integration.py
tests/inputs/case_1/: README.md  ro-crate-metadata.json
tests/inputs/case_2/subfolder/: ro-crate-metadata.json
tests/inputs/case_3/folder2/subfolder2/subfolder/: rocratefile.md
tests/inputs/case_4/: README.md
tests/test_crate/: Gemfile
tests/test_crate/_layouts/: default.html
tests/test_crate/_site/: index.html
